Fix layout bugs

--- a/src/assets/styles/utilities/_text.scss
+++ b/src/assets/styles/utilities/_text.scss
@@ -483,7 +483,7 @@ mark {
   border-radius: var(--radius-2);
 }
 
-pre:has(> code) {
+pre:not([class^="language-"]):has(> code) {
   border: var(--border);
   border-style: dashed;
   padding: var(--space-xxs);
